# haskell-cross

./: .gitignore  README.md  cabal.project  dross.cabal  fix-pkgconfig.patch  flake.nix  glfw.nix  linux-package.nix  lowercase-gdi32.patch  project.nix  vulkan-loader.nix  vulkan-validation-layers.nix  x11.patch  zip-derivation.nix
src/: Main.hs
template/: LICENSE  README.md  cabal.project  flake.nix  foobar.cabal  project.nix
