cabal-version:      3.0
name:               dross
version:            0.1.0.0
license-file:       LICENSE
author:             Samuel Evans-Powell
maintainer:         mail@sevanspowell.net

extra-source-files:
    README.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

executable dross
    import:           project-config
    build-depends:    base >=4.7 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
    main-is:  Main.hs
